--- a/main.html
+++ b/main.html
@@ -10,6 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="Text" id="name" Required>
+		<label for="email">Email</label>
+		<input type="email" id="email" Required>
+		<label>Gender: </label>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_m" Required>
+		<label for="gender_f">Female</label>
+		<input type="radio" id="gender_f" Required>
+		<label for="Cars">Car Brands: </label>
+		<select name="car" id="Cars">
+			<option value ="BMW">BMW</option>
+			<option value ="Audi">Audi</option>
+			<option value ="Mercedez">Mercedez</option>
+		</select>
+		<label for="carage">Car Age: </label>
+		<input type="number" id="carage" Required>
+		<label for="dop">Date of Purchase(dop): </label>
+		<input type="date" id="dop" Required>
+		<label for="password">Password: </label>
+		<input type="password" id="password" Required>
+		<button type="submit">Submit</button>
+
+	</form>
 
 </body>
 
