--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 		<input type="email" id="email" Required>
 		<label>Gender:</label>
 		<label for="gender_m">Male</label>
-		<input type="radio" id="gender_m" Required>
+		<input type="radio" id="gender_m" name="gender" Required>
 		<label for="gender_f">Female</label>
-		<input type="radio" id="gender_f" Required>
+		<input type="radio" id="gender_f" name="gender" Required>
 		<label for="Cars">Car Brands</label>
 		<select name="car" id="Cars">
 			<option value ="BMW">BMW</option>
