--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 		<input type="radio" id="gender_m" name="gender" Required>
 		<label for="gender_f">Female</label>
 		<input type="radio" id="gender_f" name="gender" Required>
-		<label for="Cars">Car Brands</label>
-		<select name="car" id="Cars">
+		<label for="cars">Car Brands</label>
+		<select name="car" id="cars">
 			<option value ="BMW">BMW</option>
 			<option value ="Audi">Audi</option>
 			<option value ="Mercedez">Mercedez</option>
